Added predict functions

--- a/NB_Classifier.ipynb
+++ b/NB_Classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x181d1fe88c8>"
+       "<matplotlib.legend.Legend at 0x1c618d77e48>"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,12 +128,12 @@
     "            feat_type = 'discrete'\n",
     "            self._features_info[feature_name]['categories_proba'] = {}\n",
     "            \n",
-    "            for category in np.sort(np.unique(feature_data)):\n",
+    "            for category in np.sort(np.unique(feature_col)):\n",
     "                self._features_info[feature_name]['categories_proba'][category] = []\n",
     "                \n",
     "                for cl in self.__classes:\n",
     "                    self._features_info[feature_name]['categories_proba'][category].append(\n",
-    "                        self._get_category_proba_for_class(feature_col[target_col == cl], category))\n",
+    "                        self.__get_category_proba_for_class(feature_col[target_col == cl], category))\n",
     "        else:\n",
     "            feat_type = 'continuous'\n",
     "            self._features_info[feature_name]['dist'] = []\n",
@@ -146,9 +146,9 @@
     "        \n",
     "    \n",
     "    def __get_category_proba_for_class(self, class_feature_col, category):\n",
-    "        numerator = class_feature_col.count(category) + self.__smoothing_alpha\n",
+    "        numerator = np.sum(class_feature_col == category) + self.__smoothing_alpha\n",
     "        #---------  ----------------------------------------------------------\n",
-    "        denominator = len(class_feature_col) + self.__data_len * self.__smoothing_alpha\n",
+    "        denominator = class_feature_col.shape[0] + self.__data_len * self.__smoothing_alpha\n",
     "        \n",
     "        smoothed_proba = numerator/denominator\n",
     "        return smoothed_proba\n",
@@ -161,23 +161,61 @@
     "        dist = norm(mu, sigma)\n",
     "        return dist\n",
     "        \n",
+    "    \n",
+    "    def predict(self, data):\n",
+    "        return data.apply(lambda row: self.__get_single_prediction(row, 'class'), axis = 1).to_numpy()\n",
+    "\n",
+    "    \n",
+    "    def predict_proba(self, data):\n",
+    "        return np.matrix(data.apply(lambda row: self.__get_single_prediction(row, 'proba'), axis = 1).tolist())\n",
+    "    \n",
+    "    \n",
+    "    def predict_log(self, data):\n",
+    "        return np.matrix(data.apply(lambda row: self.__get_single_prediction(row, 'log'), axis = 1).tolist())\n",
+    "        \n",
+    "    \n",
+    "    def __get_single_prediction(self, example, pred_type = 'proba'):\n",
+    "        results = []\n",
+    "        for i in range(len(self.__classes)):\n",
+    "            if pred_type == 'log':\n",
+    "                results.append(np.log(self.__classes_priory[i]))\n",
+    "            else:\n",
+    "                results.append(self.__classes_priory[i])\n",
+    "            \n",
+    "            for key, value in self._features_info.items():\n",
+    "                feature_proba = 0\n",
+    "                \n",
+    "                if value['type'] == 'discrete':\n",
+    "                    feature_proba = value['categories_proba'][example[key]][i]\n",
+    "                elif value['type'] == 'continuous':\n",
+    "                    feature_proba = value['dist'][i].pdf(example[key])\n",
+    "                \n",
+    "                if pred_type == 'log':\n",
+    "                    results[i] += np.log(feature_proba)\n",
+    "                else:\n",
+    "                    results[i] *= feature_proba\n",
+    "        \n",
+    "        if pred_type == 'class':\n",
+    "            return np.argmax(results)\n",
+    "        \n",
+    "        return results\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_X = pd.DataFrame(X, columns=['var1', 'var2'])\n",
+    "data_X = pd.DataFrame(np.append(X, np.random.randint(5, size=(200,1 )), axis = 1), columns=['var1', 'var2', 'var3'])\n",
     "data_y = pd.DataFrame(y, columns=['training_class'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,21 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'var1': {'dist': [<scipy.stats._distn_infrastructure.rv_frozen at 0x181d1f9cc08>,\n",
-       "   <scipy.stats._distn_infrastructure.rv_frozen at 0x181d1f9c208>],\n",
+       "{'var1': {'dist': [<scipy.stats._distn_infrastructure.rv_frozen at 0x1c61bd0fbc8>,\n",
+       "   <scipy.stats._distn_infrastructure.rv_frozen at 0x1c61bd0f748>],\n",
        "  'type': 'continuous'},\n",
-       " 'var2': {'dist': [<scipy.stats._distn_infrastructure.rv_frozen at 0x181d1f9c588>,\n",
-       "   <scipy.stats._distn_infrastructure.rv_frozen at 0x181d1f7c408>],\n",
-       "  'type': 'continuous'}}"
+       " 'var2': {'dist': [<scipy.stats._distn_infrastructure.rv_frozen at 0x1c61bd0f288>,\n",
+       "   <scipy.stats._distn_infrastructure.rv_frozen at 0x1c61bd0ff88>],\n",
+       "  'type': 'continuous'},\n",
+       " 'var3': {'categories_proba': {0.0: [0.1961764705882353, 0.1765686274509804],\n",
+       "   1.0: [0.18637254901960787, 0.24519607843137256],\n",
+       "   2.0: [0.20598039215686276, 0.1569607843137255],\n",
+       "   3.0: [0.20598039215686276, 0.18637254901960787],\n",
+       "   4.0: [0.18637254901960787, 0.2157843137254902]},\n",
+       "  'type': 'discrete'}}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,36 +296,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example = X[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-10.8278844 ,  -4.83392615])"
+       "matrix([[-112.68237046,   -4.68508075],\n",
+       "        [-115.04229055,   -5.06881197],\n",
+       "        [ -92.15931444,   -4.81508266],\n",
+       "        [  -4.15201473,  -77.35617464],\n",
+       "        [ -69.2121919 ,   -5.88531186]])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "example"
+    "classifier.predict_log(data_X.iloc[:5,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23, 3)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_X[(data_X.var3 == 0) & (data_y.training_class == 1)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22558823529411767"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(23 + 0.01) / (100 + 0.01 * 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,12 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-10.827884398968216"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from scipy.stats import binom\n",
-    "import matplotlib.pyplot as plt\n"
+    "data_X.loc[0, 'var1']"
    ]
   },
   {
@@ -351,23 +440,6 @@
     "#     dist = np.norm(mu, sigma)\n",
     "#     return dist"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = []\n",
-    "t.append(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
