Working on summary function

--- a/NB_Classifier.ipynb
+++ b/NB_Classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a279137d08>"
+       "<matplotlib.legend.Legend at 0x1cf99946808>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,13 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import norm\n",
-    "from scipy.stats import multinomial\n",
-    "from scipy.stats import binom\n",
+    "from sklearn.neighbors import KernelDensity\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -209,7 +208,7 @@
     "                    feature_proba = value['categories_proba'][example[key]][i]\n",
     "                elif value['type'] == 'continuous':\n",
     "                    if self.__kde_on:\n",
-    "                        feature_proba = exp(value['dist'][i].score_samples(example[key].reshape(1, -1))[0])\n",
+    "                        feature_proba = np.exp(value['dist'][i].score_samples(example[key].reshape(1, -1))[0])\n",
     "                    else:\n",
     "                        feature_proba = value['dist'][i].pdf(example[key])\n",
     "                \n",
@@ -222,13 +221,24 @@
     "            return np.argmax(results)\n",
     "        \n",
     "        return results\n",
+    "    \n",
+    "    \n",
+    "    def summary(self):\n",
+    "        print('General information :')\n",
+    "        classes_priory = \",  \".join([str(self.__classes[i]) + \" : \" + str(round(self.__classes_priory[i], 4)) + \"%\" for i in range(len(self.__classes_priory))])\n",
+    "        settings = pd.DataFrame({'attribute' : ['data_len', 'classes_priory', 'smoothing_alpha', 'kde_on', 'bandwidth', 'categorical_threshold'],\n",
+    "                                 'value' : [self.__data_len, classes_priory, self.__smoothing_alpha, self.__kde_on, self.__bandwidth, self.__categorical_threshold]})\n",
+    "        display(settings)\n",
+    "        \n",
+    "        print('\\nInformation about features :')\n",
+    "        \n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_y[data_y.training_class == 0] = 'first'\n",
+    "data_y[data_y.training_class == 1] = 'second'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -263,112 +283,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>var1</th>\n",
-       "      <th>var2</th>\n",
-       "      <th>var3</th>\n",
+       "      <th>training_class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-10.827884</td>\n",
-       "      <td>-4.833926</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-11.180031</td>\n",
-       "      <td>-4.619103</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-10.555207</td>\n",
-       "      <td>-3.014180</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-1.427065</td>\n",
-       "      <td>5.089041</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>first</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-8.162995</td>\n",
-       "      <td>-3.388966</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>-9.863664</td>\n",
-       "      <td>-2.751294</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>-1.146630</td>\n",
-       "      <td>4.108397</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>first</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>-2.330806</td>\n",
-       "      <td>4.393825</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>first</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>-9.568186</td>\n",
-       "      <td>-4.560347</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>second</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>-0.757969</td>\n",
-       "      <td>4.908984</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>first</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 3 columns</p>\n",
+       "<p>200 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          var1      var2  var3\n",
-       "0   -10.827884 -4.833926   3.0\n",
-       "1   -11.180031 -4.619103   4.0\n",
-       "2   -10.555207 -3.014180   0.0\n",
-       "3    -1.427065  5.089041   1.0\n",
-       "4    -8.162995 -3.388966   3.0\n",
-       "..         ...       ...   ...\n",
-       "195  -9.863664 -2.751294   2.0\n",
-       "196  -1.146630  4.108397   3.0\n",
-       "197  -2.330806  4.393825   3.0\n",
-       "198  -9.568186 -4.560347   4.0\n",
-       "199  -0.757969  4.908984   3.0\n",
+       "    training_class\n",
+       "0           second\n",
+       "1           second\n",
+       "2           second\n",
+       "3            first\n",
+       "4           second\n",
+       "..             ...\n",
+       "195         second\n",
+       "196          first\n",
+       "197          first\n",
+       "198         second\n",
+       "199          first\n",
        "\n",
-       "[200 rows x 3 columns]"
+       "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_X"
+    "data_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +411,7 @@
        "  'type': 'discrete'}}"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -434,42 +430,105 @@
      "output_type": "stream",
      "text": [
       "[1 1 1 0 1 1 0 1 0 1]\n",
-      "[[-23.72274488  -6.18976107]\n",
-      " [-23.92164488  -5.92955765]\n",
-      " [-20.06175201  -5.76684438]\n",
-      " [ -5.75447236 -21.00054198]\n",
-      " [-16.59638046  -6.44239963]\n",
-      " [-19.89732944  -6.20824765]\n",
-      " [ -5.69154089 -21.46830676]\n",
-      " [-22.98001485  -6.05187932]\n",
-      " [ -5.77824619 -20.65488357]\n",
-      " [-21.62441438  -5.90453274]]\n"
+      "[[2.42952777e-08 9.99999976e-01]\n",
+      " [1.53509688e-08 9.99999985e-01]\n",
+      " [6.19156201e-07 9.99999381e-01]\n",
+      " [9.99999761e-01 2.39175113e-07]\n",
+      " [3.89193211e-05 9.99961081e-01]\n",
+      " [1.13476733e-06 9.99998865e-01]\n",
+      " [9.99999859e-01 1.40681690e-07]\n",
+      " [4.44840307e-08 9.99999956e-01]\n",
+      " [9.99999654e-01 3.46065518e-07]\n",
+      " [1.48916247e-07 9.99999851e-01]]\n"
      ]
     }
    ],
    "source": [
     "print(y[:10])\n",
-    "print(classifier.predict_log(data_X.iloc[:10, :]))"
+    "print(classifier.predict_proba(data_X.iloc[:10, :]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attribute</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>data_len</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>classes_priory</td>\n",
+       "      <td>first : 0.5%,  second : 0.5%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>smoothing_alpha</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>kde_on</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>bandwidth</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>categorical_threshold</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[3.]])"
+       "               attribute                         value\n",
+       "0               data_len                           200\n",
+       "1         classes_priory  first : 0.5%,  second : 0.5%\n",
+       "2        smoothing_alpha                          0.01\n",
+       "3                 kde_on                          True\n",
+       "4              bandwidth                             2\n",
+       "5  categorical_threshold                            10"
       ]
      },
-     "execution_count": 255,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data_X.iloc[0, 2]"
+    "classifier.summary()"
    ]
   },
   {
