fixed error in Semiparametric classifier + changes in demo

--- a/BayesClassifiers_Dev.ipynb
+++ b/BayesClassifiers_Dev.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,18 +93,19 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "class NaiveBayesClassifier:\n",
-    "    def __init__(self, smoothing_alpha = 0.01, kernel = None, bandwidth = 2.):\n",
+    "    def __init__(self, smoothing_alpha = 0.01, kernel = None, bandwidth = None):\n",
     "        if not isinstance(smoothing_alpha, float):\n",
     "            raise TypeError('smoothing_alpha should have float type.')\n",
     "        if not isinstance(kernel, str) and kernel != None:\n",
     "            raise TypeError('kernel should have str type.')\n",
-    "        if not isinstance(bandwidth, float):\n",
-    "            raise TypeError('bandwidth should have float type.')\n",
+    "        if not isinstance(bandwidth, float) and bandwidth != None:\n",
+    "            raise TypeError('bandwidth should have float type or None.')\n",
     "            \n",
     "        assert smoothing_alpha > 0., 'smoothing_alpha should be higher than 0.'\n",
     "        assert kernel in [None, 'gaussian', 'tophat', 'epanechnikov', 'exponential', 'linear', 'cosine'], \"kernel should be None or one of 'gaussian'|'tophat'|'epanechnikov'|'exponential'|linear'|'cosine'\"\n",
-    "        assert bandwidth > 0., 'bandwidth should be higher than 0.'\n",
+    "        assert bandwidth == None or bandwidth > 0., 'bandwidth should be higher than 0. or None'\n",
     "            \n",
     "        self.__classes_priory = []\n",
     "        self.__features_info = {}\n",
@@ -120,6 +121,9 @@
     "        self.__classes = np.sort(np.unique(y))\n",
     "        self.__num_classes = len(self.__classes)\n",
     "        self.__categorical_threshold = round(np.sqrt(self.__data_len * 0.5)) # empirical formula\n",
+    "        \n",
+    "        if not self.__bandwidth:\n",
+    "            self.__bandwidth = ((3 * self.__data_len) / 4) ** (-1/5)\n",
     "        \n",
     "        self.__set_classes_priory(y)\n",
     "        \n",
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,23 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "from statsmodels.distributions.empirical_distribution import ECDF\n",
     "\n",
     "class SemiparametricBayesClassifier:\n",
-    "    def __init__(self, corr_type = 'pearson', kernel = 'gaussian', bandwidth = 2.):\n",
+    "    def __init__(self, corr_type = 'pearson', kernel = 'gaussian', bandwidth = None):\n",
     "        if corr_type not in ['pearson', 'spearman']: \n",
     "            raise Exception(\"corr_type should be one of ['pearson', 'spearman']\")\n",
     "        if not isinstance(kernel, str) and kernel != None:\n",
     "            raise TypeError('kernel should have str type.')\n",
-    "        if not isinstance(bandwidth, float):\n",
-    "            raise TypeError('bandwidth should have float type.')\n",
+    "        if not isinstance(bandwidth, float) and bandwidth != None:\n",
+    "            raise TypeError('bandwidth should have float type or None.')\n",
     "            \n",
     "        assert kernel in [None, 'gaussian', 'tophat', 'epanechnikov', 'exponential', 'linear', 'cosine'], \"kernel should be None or one of 'gaussian'|'tophat'|'epanechnikov'|'exponential'|linear'|'cosine'\"\n",
-    "        assert bandwidth > 0., 'bandwidth should be higher than 0.'\n",
+    "        assert bandwidth == None or bandwidth > 0., 'bandwidth should be higher than 0. or None'\n",
     "            \n",
     "        self.__classes_info = {}\n",
     "        self.__corr_type = corr_type\n",
@@ -381,6 +385,9 @@
     "        self.__data_len = len(y)\n",
     "        self.__classes = np.sort(np.unique(y))\n",
     "        self.__num_classes = len(self.__classes)\n",
+    "        \n",
+    "        if not self.__bandwidth:\n",
+    "            self.__bandwidth = ((3 * self.__data_len) / 4) ** (-1/5)\n",
     "        \n",
     "        for cl in self.__classes:\n",
     "            self.__classes_info[cl] = {}\n",
@@ -422,7 +429,13 @@
     "                ECDFs.append(self.__classes_info[cl]['features'][feat]['ECDF'](value))\n",
     "                prob_mults *= np.exp(self.__classes_info[cl]['features'][feat]['dist'].score_samples(np.float64(value).reshape(1, -1))[0])\n",
     "            \n",
-    "            copula = self.__compute_copula(np.array(ECDFs), self.__classes_info[cl]['corr_matrix'])\n",
+    "            for i in range(len(ECDFs)):\n",
+    "                if ECDFs[i] == 0:\n",
+    "                    ECDFs[i] = 0.001\n",
+    "                elif ECDFs[i] == 1:\n",
+    "                    ECDFs[i] = 0.999\n",
+    "                \n",
+    "            copula = self.__compute_copula(norm.ppf(ECDFs), self.__classes_info[cl]['corr_matrix'])\n",
     "            \n",
     "            results.append(copula * prob_mults * self.__classes_info[cl]['priory'])\n",
     "            \n",
@@ -603,6 +616,29 @@
     "print(f\"NB classifier : {np.sum(np.abs(nb_classifier.predict(data_X) - np.squeeze(data_y.values)))}\")\n",
     "print(f\"Semiparametric classifier : {np.sum(np.abs(sp_classifier.predict(data_X) - np.squeeze(data_y.values)))}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_default(func, **default):\n",
+    "    def inner(*args, **kwargs):\n",
+    "        kwargs.update(default)        # Update function kwargs w/ decorator defaults\n",
+    "        return func(*args, **kwargs)  # Call function w/ updated kwargs\n",
+    "    return inner  \n",
+    "\n",
+    "for key in ['sum', 'mean', 'std']:\n",
+    "    setattr(pd.DataFrame, key, set_default(getattr(pd.DataFrame, key), skipna=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -621,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
